[tool.poetry]
name = "hello_world"
version = "0.1.0"
description = ""
authors = ["Bastien Chatelard <chatel.bast@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
